--- a/reusable_templates/predictive_analytics_structured_data/requirements.txt
+++ b/reusable_templates/predictive_analytics_structured_data/requirements.txt
@@ -5,3 +5,9 @@ palmerpenguins # open source penguins data set used in "prediction" template
 
 # AutoEDA
 autoviz
+
+# Modeling
+
+
+# Explainability
+eli5
